--- a/style.css
+++ b/style.css
@@ -29,13 +29,19 @@ body{
   p {
       padding-right: 30px;
       padding-left: 30px;
-      padding-top: 10px;
-      
-  }
+      padding-top: 30px;
+      text-indent: 30px;
+    
+       }
 
   .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+  }
+
+  label {
+      font-family:'Open Sans Condensed';
+      font-size:18px
   }
