--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1 {
 
 body{
     background-color: lightgrey
+   
 }
 
 .boxed {
@@ -23,7 +24,7 @@ body{
 
   h2 {
       text-align: center ;
-      font-size: 36px
+      font-size: 36px;
   }
 
   p {
@@ -45,3 +46,11 @@ body{
       font-family:'Open Sans Condensed';
       font-size:18px
   }
+
+.card-body{
+    text-align: center;
+    font-family:'Open Sans Condensed';
+     font-size:20px;
+     background-color:white;
+     
+}
