--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ body{
 }
 
 main {
-    min-height: calc(100vh - 80px);
+    min-height: calc(100vh - 233px);
+    padding: 40px;
+    
     
 }
 
@@ -28,10 +30,10 @@ a{
     border: 5px solid teal ;
     margin-top: 50px;
     padding-top: 10px;
-    background-color: white;
     font-family: 'Open Sans Condensed';
-    font-size: 18px;
+    font-size: 28px;
     margin-bottom: 50px;
+    color:white;
   }
 
   h2 {
@@ -94,4 +96,12 @@ footer {
 .container {
     max-width: 960px;
     width:100%;
+    min-height: 200px;
+    background-color: teal;
+    
+    
 }
+
+.navbar-expand { 
+    justify-content: center!important;
+ }
